--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Tetris3d</string>
+    <string name="start_game">게임 시작하기</string>
+    <string name="start_game_desc">클릭하면 3d 테트리스를 시작합니다</string>
+    <string name="prefix_string_line_count">"라인수:\n"</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
