--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <string name="start_game">게임 시작하기</string>
     <string name="start_game_desc">클릭하면 3d 테트리스를 시작합니다</string>
     <string name="prefix_string_line_count">"라인수:\n"</string>
+    <string name="game_over_dialg_title">게임 종료</string>
+    <string name="game_over_dialg_ok">게임 종료</string>
+    <string name="game_over_dialg_restart">게임 재시작</string>
+    <string name="game_over_dialg_prefix_content">게임을 재시작하시겠습니까?</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
