--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,19 @@
     <string name="game_over_dialg_ok">게임 종료</string>
     <string name="game_over_dialg_restart">게임 재시작</string>
     <string name="game_over_dialg_prefix_content">게임을 재시작하시겠습니까?</string>
+    <string name="pausedialog_title">일시 정지</string>
+    <string name="pausedialog_item_resume">게임으로 돌아가기</string>
+    <string name="pausedialog_item_restart_game">게임 재시작</string>
+    <string name="pausedialog_item_exit_game">게임 종료</string>
+    <string name="gamelogactivity_nolog_title">게임 기록이 존재하지 않습니다</string>
+    <string name="gamelogactivity_clearlog_title">모든 기록 삭제</string>
+    <string name="gamelogactivity_item_playtime">"플레이 시간: "</string>
+    <string name="gamelogactivity_item_rmlayer">"지운 높이수: "</string>
+    <string name="gamelogactivity_item_time">"플레이 종료시각: "</string>
+    <string name="gamelogactivity_item_player_cnt">"참여했던 플레이어 수: "</string>
+    <string name="gamelogactivity_item_boardsize_format">"보드 사이즈: "</string>
+    <string name="gamelogactivity_sort_title">정렬</string>
+
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
