--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="gamelogactivity_sort_title">정렬</string>
     <string name="startLog_title">게임 기록 보기</string>
     <string name="startLog_desc">이전에 게임 종료된 기록을 봅니다</string>
+    <string name="sp_name_save_btn">설정및 저장</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
